k8s/api/1-config-server-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.10.0 (8bb0907)
  creationTimestamp: null
  labels:
    io.kompose.service: config-server
  name: config-server
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: config-server
    spec:
      containers:
      - image: gcr.io/pet-clinic-198620/spring-petclinic-config-server:latest
        name: config-server
        ports:
        - containerPort: 8888
        resources: {}
      restartPolicy: Always
status: {}
