k8s/api/api-gateway-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: api-gateway
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      labels:
        app: master
    spec:
      containers:
      - command:
        - ./wait-for-it.sh
        - discovery-server:8761
        - --timeout=60
        - --
        - java
        - -Djava.security.egd=file:/dev/./urandom
        - -jar
        - /app.jar
        image: gcr.io/concrete-198923/spring-petclinic-api-gateway:latest
        name: master
        ports:
        - containerPort: 8080
        resources: {}
      restartPolicy: Always
status: {}
