k8s/api/customers-service-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.10.0 (8bb0907)
  creationTimestamp: null
  labels:
    io.kompose.service: customers-service
  name: customers-service
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: customers-service
    spec:
      containers:
      - command:
        - ./wait-for-it.sh
        - discovery-server:8761
        - --timeout=60
        - --
        - java
        - -Djava.security.egd=file:/dev/./urandom
        - -jar
        - /app.jar
        image: gcr.io/pet-clinic-198620/spring-petclinic-customers-service:latest
        name: customers-service
        ports:
        - containerPort: 8081
        resources: {}
      restartPolicy: Always
status: {}
