k8s/api/tracing-server-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.10.0 (8bb0907)
  creationTimestamp: null
  labels:
    io.kompose.service: tracing-server
  name: tracing-server
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: tracing-server
    spec:
      containers:
      - command:
        - ./wait-for-it.sh
        - discovery-server:8761
        - --timeout=60
        - --
        - java
        - -Djava.security.egd=file:/dev/./urandom
        - -jar
        - /app.jar
        image: gcr.io/concrete-198923/spring-petclinic-tracing-server:latest
        name: tracing-server
        ports:
        - containerPort: 9411
        resources: {}
      restartPolicy: Always
status: {}
