k8s/api/api-gateway-service.yaml
---
  kind: Service
  apiVersion: v1
  metadata:
    name: api-gateway
  spec:
    type: NodePort
    selector:
      app: api-gateway
    ports:
      - protocol: TCP
        port: 8080
        targetPort: 8080
        name: api-gateway
