k8s/api/api-gateway-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-gateway
  annotations:
    kubernetes.io/ingress.global-static-ip-name: petclinic-dev
spec:
  tls:
  - secretName: tls-api
  backend:
    serviceName: api-gateway
    servicePort: 8080
